[package]
name = "sparrow-expressions"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
Execution of expressions over record batches.
"""

[dependencies]
arrow-arith.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-cast.workspace = true
arrow-data.workspace = true
arrow-ord.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
arrow-string.workspace = true
derive_more.workspace = true
error-stack.workspace = true
hashbrown.workspace = true
index_vec.workspace = true
inventory.workspace = true
itertools.workspace = true
num.workspace = true
serde_json.workspace = true
sparrow-arrow = { path = "../sparrow-arrow" }
sparrow-physical = { path = "../sparrow-physical" }
static_init.workspace = true
substring.workspace = true

[dev-dependencies]
approx.workspace = true

[lib]
doctest = false
