[package]
name = "sparrow-expressions"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
Implementation of stateless expressions over batches.
"""

[dependencies]
arrow-arith.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-cast.workspace = true
arrow-data.workspace = true
arrow-ord.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
arrow-string.workspace = true
error-stack.workspace = true
inventory.workspace = true
itertools.workspace = true
num.workspace = true
serde_json.workspace = true
sparrow-arrow = { path = "../sparrow-arrow" }
sparrow-interfaces = { path = "../sparrow-interfaces" }
substring.workspace = true

[dev-dependencies]
approx.workspace = true

[lib]
doctest = false
