[package]
name = "sparrow-interfaces"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
Common interfaces for the Sparrow compilation and runtime.
"""

[dependencies]
arrow-schema.workspace = true
derive_more.workspace = true
error-stack.workspace = true
futures.workspace = true
sparrow-batch = { path = "../sparrow-batch" }

[dev-dependencies]

[lib]
bench = false
doctest = false
