[package]
name = "sparrow-journal"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
Durable journaling of batches.
"""

[dependencies]
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-ipc.workspace = true
arrow-schema.workspace = true
derive_more.workspace = true
error-stack.workspace = true
futures.workspace = true
itertools.workspace = true
okaywal = "0.3.0"
parking_lot.workspace = true
sparrow-batch = { path = "../sparrow-batch" }
tracing.workspace = true

[dev-dependencies]
sparrow-batch = { path = "../sparrow-batch", features = ["testing"] }
sparrow-testing = { path = "../sparrow-testing" }
tempfile.workspace = true

[lib]
doctest = false
