[package]
name = "sparrow-kernels"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
Computation kernels defined over Arrow arrays.
"""

[dependencies]
anyhow.workspace = true
arrow.workspace = true
chrono.workspace = true
chronoutil.workspace = true
itertools.workspace = true
sparrow-arrow = { path = "../sparrow-arrow" }
substring.workspace = true

[dev-dependencies]
proptest.workspace = true

[lib]
bench = false
doctest = false

