[package]
name = "sparrow-logical"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
Logical representation of Kaskada queries.
"""

[dependencies]
arrow-schema.workspace = true
decorum.workspace = true
derive_more.workspace = true
enum-as-inner.workspace = true
error-stack.workspace = true
hashbrown.workspace = true
itertools.workspace = true
serde.workspace = true
sparrow-types = { path = "../sparrow-types" }
static_init.workspace = true
serde_yaml.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true

[lib]
doctest = false
