[package]
name = "sparrow-physical"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
Physical execution plans for Kaskada queries.
"""

[dependencies]
arrow-schema.workspace = true
index_vec.workspace = true
serde_yaml.workspace = true
serde.workspace = true
sparrow-arrow = { path = "../sparrow-arrow" }
strum_macros.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true

[lib]
doctest = false
