[package]
name = "sparrow-qfr-tool"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
Query Flight Recorder for Sparrow queries.
"""

[dependencies]
clap.workspace = true
derive_more.workspace = true
error-stack.workspace = true
fallible-iterator.workspace = true
hashbrown.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
smallvec.workspace = true
sparrow-api = { path = "../sparrow-api" }
sparrow-qfr = { path = "../sparrow-qfr" }

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[[bin]]
name = "qfr"
doctest = false
path = "src/main.rs"
