[package]
name = "sparrow-qfr"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = """
Query Flight Recorder for Sparrow queries.
"""

[dependencies]
cpu-time.workspace = true
derive_more.workspace = true
error-stack.workspace = true
fallible-iterator.workspace = true
futures.workspace = true
inventory.workspace = true
itertools.workspace = true
once_cell.workspace = true
pin-project.workspace = true
prost.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
insta.workspace = true
serde_yaml.workspace = true
static_assertions.workspace = true
tempfile.workspace = true

[lib]
doctest = false
